--- a/app.yaml
+++ b/app.yaml
@@ -1,4 +1,3 @@
-# Force redeploy to fix formatting
 runtime: nodejs18
 instance_class: F1
 
@@ -7,6 +6,7 @@ env_variables:
   API_SECRET: "Ido18072010!"
   DISPLAY_UNITS: "mg/dl"
   LANGUAGE: "en"
+  TZ: "Asia/Jerusalem"
   ENABLE: "careportal basal iob cob sage cage bwp rawbg status"
 
 automatic_scaling:
