--- a/app.yaml
+++ b/app.yaml
@@ -2,7 +2,7 @@ runtime: nodejs18
 instance_class: F1
 
 env_variables:
-  MONGO_CONNECTION: "mongodb+srv://familyitzhakov:JTCEVojOAWqRu3SN@nightscout-cluster.oxh4avh.mongodb.net/nightscout?retryWrites=true&w=majority"
+  MONGODB_URI: "mongodb+srv://familyitzhakov:JTCEVojOAWqRu3SN@nightscout-cluster.oxh4avh.mongodb.net/nightscout?retryWrites=true&w=majority"
   API_SECRET: "Ido18072010!"
   DISPLAY_UNITS: "mg/dl"
   LANGUAGE: "en"
